--- a/app/assets/stylesheets/text.css.scss
+++ b/app/assets/stylesheets/text.css.scss
@@ -70,8 +70,24 @@ p {
   margin-top: 30px;
   border: none;
   
-  h2 {
+  h2, h3 {
     padding-top: 10px;
     padding-bottom: 10px;
   }
+}
+
+
+.completed {
+  background-color: #C5E3BF;
+  padding: 5px;
+}
+
+.rejected {
+  background-color: #FF7F7F;
+  padding: 5px;
+}
+
+.pending {
+  background-color: #FFFF7F;
+  padding: 5px;
 }
