--- a/app/views/organization_details/_form.html.erb
+++ b/app/views/organization_details/_form.html.erb
@@ -17,7 +17,7 @@
 	  <%= collection_select(:organization_detail, :organization_id, current_user.organizations.where({fair: true}), :id, :name_and_state,  
 	  include_blank: true) %>
 	<% else %>
-	  <%= f.hidden_field :organization_id, value: :organization_id %><%= @organization_detail.organization.name %>
+	  <%= f.hidden_field :organization_id, value: @organization_detail.organization_id %><%= @organization_detail.organization.name %>
 	<% end %>
   </div>
   <div class="field">
