--- a/app/views/static_pages/instructions.html.erb
+++ b/app/views/static_pages/instructions.html.erb
@@ -3,11 +3,11 @@
 	<div class="row">
 		<div class='col-md-4'>
 			<h3>1. Sign In or Create a New User Account</h3>
-			<p>Click either "sign in" or "create an account" at the top of the page. If you are creating a new account, you must fill out some brief profile information. The e-mail address you provide is also the username to log into this site. <span class="special italic">Your login information for this site is not connected to your www.fairsandexpos.com login.</span></p>
+			<p>Click either "sign in" or "create an account" at the top of the page. If you are creating a new account, you must fill out some brief profile information. The e-mail address you provide is also the username to log into this site. <span class="bold italic">Your login information for this site is not connected to your www.fairsandexpos.com login.</span></p>
 		</div>
 		<div class='col-md-4'>
 			<h3>2. Link Your Organization to Your User Account</h3>
-			<p>If this is your first year submitting entries to this site, you must link your user account to at least one fair. If you do not see your organization in the listing provided, the page will provide an option for you to create a new organization in our database. <span class="special italic">It is possible to link your user account to more than one organization.</span></p>
+			<p>If this is your first year submitting entries to this site, you must link your user account to at least one fair. If you do not see your organization in the listing provided, the page will provide an option for you to create a new organization in our database. <span class="bold italic">It is possible to link your user account to more than one organization.</span></p>
 		</div>
 		<div class='col-md-4'>
 			<h3>3. Update Your Most Recent Fair Dates and Attendance</h3>
@@ -21,11 +21,11 @@
 		</div>
 		<div class='col-md-4'>
 			<h3>5. Assign Documents to the Submission</h3>
-			<p>Next, you will be redirected to upload a document to the submission you just created, which could be a PDF essay (the most common), a photo, a video, or a web link. Once saved, you may return to the "My Submissions" page to add another document to the same entry. <span class="special italic">Caution: filesize limits exist.</span></p>
+			<p>Next, you will be redirected to upload a document to the submission you just created, which could be a PDF essay (the most common), a photo, a video, or a web link. Once saved, you may return to the "My Submissions" page to add another document to the same entry. <span class="bold italic">Caution: filesize limits exist.</span></p>
 		</div>
 		<div class='col-md-4'>
 			<h3>6. Mail (if Applicable) and Monitor Your Submissions</h3>
-			<p>Certain categories also require that you mail a physical entry to the IAFE office. Please read the rules carefully and ensure that the IAFE office will receive your entry before the deadline. You can use the "My Submissions" page to monitor the status of your submission and, eventually, its placement!</p>
+			<p>Certain categories also require that you mail a physical entry to the IAFE office. Please read the rules carefully and ensure that the IAFE office will receive your entry before the deadline. You can use the "My Submissions" page to view which categories you entered and to monitor the status of your submission!</p>
 		</div>
 	</div>
 </div>
