--- a/app/views/submissions/_form.html.erb
+++ b/app/views/submissions/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
   
   <div class="field">
-    <%= f.label :category_id %><br>
+    <%= f.label :category_id %> <span class="required">*</span><br>
     <% if params[:action] == 'new' || params[:action] == 'create' %>
       <%= collection_select(:submission, :category_id, Category.sort_by_category_codes(Category.all), :id, :award_code_category,
       include_blank: "Select the category you wish to enter") %>
@@ -21,12 +21,12 @@
     <% end %>
   </div>
   <div class="field">
-  	<%= f.label :user_id, "Submitted By" %><br>
+  	<%= f.label :user_id, "Submitted By" %> <span class="required">*</span><br>
 	<%= f.hidden_field :user_id, value: current_user.id %> 
     <%= current_user.first_name %> <%= current_user.last_name %>
   </div>
   <div class="field">
-    <%= f.label :organization_id, "Organization of Submission" %><br>
+    <%= f.label :organization_id, "Organization of Submission" %> <span class="required">*</span><br>
     <%= collection_select(:submission, :organization_id, current_user.organizations.where({fair: true}), :id, :name_and_state) %>
   </div>
   <div class="field">
