--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :first_name %><br>
+    <%= f.label :first_name %> <span class="required">*</span><br>
     <%= f.text_field :first_name %>
   </div>
   <div class="field">
-    <%= f.label :last_name %><br>
+    <%= f.label :last_name %> <span class="required">*</span><br>
     <%= f.text_field :last_name %>
   </div>
   <div class="field">
@@ -24,15 +24,15 @@
     <%= f.text_field :suffix %>
   </div>
   <div class="field">
-    <%= f.label :phone %><br>
+    <%= f.label :phone %> <span class="required">*</span><br>
     <%= f.text_field :phone %>
   </div>
   <div class="field">
-    <%= f.label :email %><br>
+    <%= f.label :email %> <span class="required">*</span><br>
     <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :email_confirmation, "Email Confirmation" %><br>
+    <%= f.label :email_confirmation, "Email Confirmation" %> <span class="required">*</span><br>
 	<% if params[:action] == 'new' || params[:action] == 'create' %>
       <%= f.text_field :email_confirmation %>
 	<% else %>
@@ -41,11 +41,11 @@
     </div>
   <% if params[:action] == 'new' || params[:action] == 'create' %>
     <div class="field">
-      <%= f.label :password %><br>
+      <%= f.label :password %> <span class="required">*</span><br>
       <%= f.password_field :password %>
     </div>
     <div class="field">
-     <%= f.label :password_confirmation, "Password Confirmation" %><br>
+     <%= f.label :password_confirmation, "Password Confirmation" %> <span class="required">*</span><br>
      <%= f.password_field :password_confirmation %>
     </div>
   <% end %>
