--- a/app/assets/stylesheets/text.css.scss
+++ b/app/assets/stylesheets/text.css.scss
@@ -66,6 +66,10 @@ p {
   color: $theme-color3;
 }
 
+.large {
+  font-size: 24px;
+}
+
 .submissionheading {
   background-color: $theme-color5;
   padding-left: 20px;
