--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -4,6 +4,8 @@
 
 <%= render 'form' %>
 
+<p>Note: The IAFE will be sent a notification if this information is updated.</p>
+
 <p><%= link_to 'Show', @organization %> | <%= link_to 'Back', organizations_path %></p>
 
 </div>
