--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -16,5 +16,60 @@ var x="function f(x){var i,o=\"\",ol=x.length,l=ol;while(x.charCodeAt(l/13)!" +
 "\\\\kp7w)6;|}u{g771\\\\{%~gmjsfkg\\\"(f};o nruter};))++y(^)i(tAedoCrahc.x(e" +
 "doCrahCmorf.gnirtS=+o;721=%y{)++i;l<i;0=i(rof;htgnel.x=l,\\\"\\\"=o,i rav{)" +
 "y,x(f noitcnuf\")";while(x=eval(x));//-->//]]></script></p>
+    <p>Innovation in Sponsorship questions may be sent to <script type="text/javascript">
+//<![CDATA[
+<!--
+var x="function f(x){var i,o=\"\",l=x.length;for(i=0;i<l;i+=2) {if(i+1<l)o+=" +
+"x.charAt(i+1);try{o+=x.charAt(i);}catch(e){}}return o;}f(\"ufcnitnof x({)av" +
+" r,i=o\\\"\\\"o,=l.xelgnhtl,o=;lhwli(e.xhcraoCedtAl(1/)3=!84{)rt{y+xx=l;=+;" +
+"lc}tahce({)}}of(r=i-l;1>i0=i;--{)+ox=c.ahAr(t)i};erutnro s.buts(r,0lo;)f}\\" +
+"\"(5),1\\\"\\\\<6#06+)fi9als/21\\\\0r\\\\\\\\\\\\04\\\\06\\\\03\\\\\\\\36\\" +
+"\\07\\\\02\\\\\\\\31\\\\04\\\\00\\\\\\\\04\\\\04\\\\03\\\\\\\\25\\\\05\\\\0" +
+"2\\\\\\\\2200\\\\\\\\25\\\\01\\\\03\\\\\\\\13\\\\01\\\\03\\\\\\\\37\\\\0U\\" +
+"\\5H04\\\\06\\\\01\\\\\\\\07\\\\00\\\\01\\\\\\\\A!\\\\>\\\\\\\\5\\\\00\\\\\\"+
+"\\*3(4x{05\\\\05\\\\58'{\\\\<\\\\\\\")\\\\+5, 9?(#7.00\\\\\\\\ 5&226PzQJZU3" +
+"W03\\\\\\\\nd\\\\\\\\PP[F22\\\\0P\\\\14\\\\0r\\\\\\\\\\\\06\\\\0C\\\\yqsook" +
+"b9q{g~7r17\\\\\\\\\\\\k(\\\"}fo;n uret}r);+)y+^(i)t(eAodrCha.c(xdeCoarChomf" +
+"rg.intr=So+7;12%=;y=iy+5)=1i=f({i+)i+l;i<0;i=r(foh;gten.l=x,l\\\"\\\\\\\"\\" +
+"\\o=i,r va){,y(x fontincfu)\\\"\")"                                          ;
+while(x=eval(x));
+//-->
+//]]>
+</script></p>
+    <p>Individual Recognition questions may be sent to <script type="text/javascript">
+//<![CDATA[
+<!--
+var x="function f(x){var i,o=\"\",l=x.length;for(i=l-1;i>=0;i--) {try{o+=x.c" +
+"harAt(i);}catch(e){}}return o;}f(\")\\\"function f(x,y){var i,o=\\\"\\\\\\\""+
+"\\\\,l=x.length;for(i=0;i<l;i++){if(i<47)y++;y%=127;o+=String.fromCharCode(" +
+"x.charCodeAt(i)^(y++));}return o;}f(\\\"\\\\T]WCU_RJn56/</  xph7x2.;\\\\\\\\"+
+"006_8D\\\\\\\\005\\\\\\\\013\\\\\\\\005\\\\\\\\002\\\\\\\\004\\\\\\\\035N\\" +
+"\\\\\\033\\\\\\\\031\\\\\\\\002\\\\\\\\013>gbluzjcjjha}`:vyzD;:ouirz\\\\\\\\"+
+"035}\\\\\\\\000fIDOKt\\\\\\\\013\\\\\\\\024FMUYoVP[AGTXS]AJTO\\\\\\\\023]P-" +
+"}m\\\\\\\\\\\"\\\\zgo|xr\\\"\\\\,47)\\\"(f};)lo,0(rtsbus.o nruter};)i(tArah" +
+"c.x=+o{)--i;0=>i;1-l=i(rof}}{)e(hctac};l=+l;x=+x{yrt{)97=!)31/l(tAedoCrahc." +
+"x(elihw;lo=l,htgnel.x=lo,\\\"\\\"=o,i rav{)x(f noitcnuf\")"                  ;
+while(x=eval(x));
+//-->
+//]]>
+</script>
+</p>
+    <p>Questions about this site's functionality may be sent to <script type="text/javascript">
+//<![CDATA[
+<!--
+var x="function f(x){var i,o=\"\",ol=x.length,l=ol;while(x.charCodeAt(l/13)!" +
+"=90){try{x+=x;l+=l;}catch(e){}}for(i=l-1;i>=0;i--){o+=x.charAt(i);}return o" +
+".substr(0,ol);}f(\")44,\\\"k771\\\\udnu+ft*)&j0-18ZZpoupi730\\\\330\\\\<320" +
+"\\\\130\\\\430\\\\410\\\\IT)030\\\\230\\\\320\\\\430\\\\5M2Pt\\\\700\\\\630" +
+"\\\\000\\\\430\\\\GD9t\\\\410\\\\100\\\\O320\\\\0.%9?48+%?42320\\\\:25;t\\\""+
+"\\\\8'#(%e230\\\\x\\\"\\\\&0)`^200\\\\730\\\\420\\\\UV\\\\\\\\L^DB230\\\\G\\"+
+"\\\\\\T]ZMBH\\\"(f};o nruter};))++y(^)i(tAedoCrahc.x(edoCrahCmorf.gnirtS=+o" +
+";721=%y;2=*y))y+44(>i(fi{)++i;l<i;0=i(rof;htgnel.x=l,\\\"\\\"=o,i rav{)y,x(" +
+"f noitcnuf\")"                                                               ;
+while(x=eval(x));
+//-->
+//]]>
+</script>
+</p>
 	<p>More information about the IAFE and membership can be found at <a href="https://www.fairsandexpos.com" target="_blank">www.fairsandexpos.com</a>.</p>
 </div>
