--- a/app/views/static_pages/instructions.html.erb
+++ b/app/views/static_pages/instructions.html.erb
@@ -11,7 +11,7 @@
 		</div>
 		<div class='col-md-4'>
 			<h3>3. Update Your Most Recent Fair Dates and Attendance</h3>
-			<p>Each year you must first update your fair dates and total attendance before you can create a new contest submission. This ensures that your fair is categorized in the proper division, which is based on fair attendance.</p>
+			<p>Each year you must first update your <span class="bold italic">MOST RECENT</span> fair dates and your <span class="bold italic">PREVIOUS YEAR (<%= Time.now.year - 1%>)</span> total attendance before you can create a new contest submission. This ensures that your fair is categorized in the proper division, which is based on fair attendance.</p>
 		</div>
 	</div>
 	<div class="row">
