--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -2,6 +2,8 @@
 	
 	<h1>Judge Dashboard</h1>
 
+<p>Note: Please score carefully--once you score an entry, you cannot go back to change the score. The IAFE encourages the use of fractions to prevent ties.</p>
+
 <% current_user.judges.group(:category_id, :division_id).order('category_id DESC').each do |judge| %>
   <div class="submissionheading"><h3><%= judge.category.award.name %> <%= judge.category.code %>: <%= judge.category.name %> - <%= judge.division.name %></h3></div>
   <% @submissions.where(category_id: judge.category_id, division_id: judge.division_id, status: 'Approved', contest_year: Time.now.year).in_groups_of(3, false) do |group| %>
@@ -17,7 +19,7 @@
                 <p class="completed">Your score: <%= s.total_score %></p>
                 <p>Your comments: <%= s.comments %></p>
                 <p>Did you disqualify this entry? <span class="bold"><%= s.disqualify %></span></p>
-                <p><%= link_to 'View Entry/Edit Score', edit_submission_score_path(submission_id: s.submission_id, id: s.id) %></p>
+                <p><%= link_to 'View Entry', edit_submission_score_path(submission_id: s.submission_id, id: s.id) %></p>
               <% elsif s.where(:user_id == current_user.id).count == 0 %>
                 <p><%= link_to 'Score This Entry', new_submission_score_path(submission) %></p>
               <% end %>
