--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:error] -%>
+  <p class="important center" style="background-color: #ffcccc; padding: 5px;"><%=h flash[:error] %></p>
+<% end -%>
+
     <div class="jumbotron">
       <div class="container">
         <img src="/images/template/logo.png" class="logo"/>
