--- a/app/views/submissions/_form.html.erb
+++ b/app/views/submissions/_form.html.erb
@@ -54,7 +54,8 @@
     <% if params[:action] == 'new' || params[:action] == 'create' %>
       <p><%= f.submit "Next: Upload New Document/Link" %></p>
     <% else %>
-      <p><%= f.submit "Submit" %></p>
+      <% if @submission.status == 'Pending' || @submission.status == 'Incomplete' %><p><%= f.submit "Submit" %></p>
+      <% else %><p class="important">This submission has been approved or rejected, you cannot change it.</p><% end %>
     <% end %>
     </div>
 <% end %>
